--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.0",
     "puppeteer": "^21.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
