--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/wisnshaftler/mj-downloader#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mysql2": "^3.6.0",
     "puppeteer": "^21.1.1"
   },
