--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/wisnshaftler/mj-downloader#readme",
   "dependencies": {
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
