--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "image-size": "^1.0.2",
     "mysql2": "^3.6.0",
-    "puppeteer": "^21.1.1"
+    "puppeteer": "^21.1.1",
+    "sharp": "^0.32.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
